# haz-skills

./: .gitignore  AGENTS.md
change-summary/: SKILL.md
change-summary/references/: plan-v2.md  plan.md  repo-config.md
change-summary/references/prompts/: dedup-rules.md  interpret-orchestration.md  interpret-rules.md  orphan-fill-rules.md  verify-orchestration.md  verify-rules.md
change-summary/scripts/: .gitignore  analyze-changes.py  pyproject.toml
change-summary/scripts/src/change_summary/: __init__.py  chunk.py  classify.py  cli.py  context.py  crosscheck.py  filter.py  format.py  git_ops.py  merge.py  models.py  orphan.py  prompts.py  validate.py
change-summary/scripts/tests/: conftest.py  test_classify.py  test_context.py  test_filter.py  test_net_diff.py  test_orphan.py  test_prompts_integration.py
change-summary/scripts/tests/fixtures/: build-submodule-fixtures.sh  build_components.py  child-components.bundle  child-drivers.bundle  generate_c_code.py  parent.bundle
codex-research/: SKILL.md
commit/: SKILL.md
good-research/: SKILL.md
lib/: detect-platform.py
merge-message/: SKILL.md  plan.md
pr-create/: SKILL.md
pr-create/scripts/: detect-platform.py
python-app/: SKILL.md
python-app/examples/: simple-script-app.py
python-app/references/: _completion.py  pyproject-snippets.md
release-create/: SKILL.md  plan.md
release-create/references/: keep-a-changelog.md
technical-blog/: SKILL.md
tg-digest/: SKILL.md
tg-digest/references/: focus-questions.md
tg-digest/scripts/: tg_export.py  tg_semantic.py
(+1 files in other folders)
